Ensure roles are not wrapped in users.list

--- a/src/js/app/pages/users.list/users.list.scss
+++ b/src/js/app/pages/users.list/users.list.scss
@@ -48,3 +48,7 @@ table.vgt-table {
 .userList-row--firstName {
     font-weight: bold;
 }
+
+.userList-column--role {
+    text-align: center;
+}
